force-app/main/default/objects/Feature_Flag__c/Feature_Flag__c.object-meta.xml
<CustomObject>
    <description>Feature Flag Custom Object</description>
    <label>Feature Flag</label>
    <nameField>
        <label>Feature Flag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Flags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>