force-app/main/default/objects/Feature_Flag__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Feature Flag Description</description>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>