force-app/main/default/objects/Feature_Flag__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <type>Checkbox</type>
    <inlineHelpText/>
    <defaultValue>false</defaultValue>
    <description>Is Feature Flag Active?</description>
    <label>Is Active</label>
</CustomField>