force-app/main/default/objects/Feature_Flag__c/fields/Percentage_Rollout__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Rollout__c</fullName>
    <label>Percentage Rollout</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>